# interfaze-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  qa-live.yml
scripts/: qa_live.py
src/interfaze/: __init__.py  _chat.py  _client.py  _constants.py  _errors.py  _guard.py  _inputs.py  _schema.py  _stream.py  _tasks.py  _types.py  langchain.py
tests/: assets.py  conftest.py  test_async.py  test_chat.py  test_compliance.py  test_errors.py  test_guard.py  test_inputs_and_client.py  test_langchain.py  test_models.py  test_schema.py  test_stream.py  test_tasks.py
