[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interfaze"
version = "1.0.1"
description = "Official Interfaze SDK."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Interfaze" }]
keywords = ["interfaze", "openai", "ai", "ocr", "speech-to-text", "web-search", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = ["openai>=2,<3"]

[project.urls]
Homepage = "https://interfaze.ai"
Repository = "https://github.com/InterfazeAI/interfaze-python"

[project.optional-dependencies]
langchain = ["langchain-openai>=1.3.5; python_version>='3.10'"]
dev = [
  "pytest>=8",
  "respx>=0.21",
  "mypy>=1.11",
  "ruff>=0.6",
  "pydantic>=2",
  "langchain-openai>=1.3.5; python_version>='3.10'",
  "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interfaze"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/interfaze"]
omit = ["src/interfaze/langchain.py"]

[tool.ruff]
line-length = 110

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/interfaze"]

[[tool.mypy.overrides]]
module = ["langchain_openai.*", "langchain_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["interfaze.langchain"]
disallow_subclassing_any = false
warn_return_any = false
